@@ -10,15 +10,15 @@ package org.elasticsearch.script;
 
 import org.elasticsearch.common.bytes.BytesArray;
 import org.elasticsearch.core.Tuple;
-import org.elasticsearch.common.xcontent.DeprecationHandler;
-import org.elasticsearch.common.xcontent.NamedXContentRegistry;
-import org.elasticsearch.common.xcontent.XContentBuilder;
-import org.elasticsearch.common.xcontent.XContentFactory;
-import org.elasticsearch.common.xcontent.XContentParser;
-import org.elasticsearch.common.xcontent.XContentType;
 import org.elasticsearch.script.ScriptContextInfo.ScriptMethodInfo;
 import org.elasticsearch.script.ScriptContextInfo.ScriptMethodInfo.ParameterInfo;
 import org.elasticsearch.test.ESTestCase;
+import org.elasticsearch.xcontent.DeprecationHandler;
+import org.elasticsearch.xcontent.NamedXContentRegistry;
+import org.elasticsearch.xcontent.XContentBuilder;
+import org.elasticsearch.xcontent.XContentFactory;
+import org.elasticsearch.xcontent.XContentParser;
+import org.elasticsearch.xcontent.XContentType;
 
 import java.io.IOException;
 import java.util.ArrayList;
@@ -45,10 +45,19 @@ public class ScriptContextInfoTests extends ESTestCase {
     }
 
     public static class PrimitiveContext {
-        public int execute(boolean foo, long bar, short baz, float qux) {return 0;}
-        public static final String[] PARAMETERS = {"foo", "bar", "baz", "qux"};
-        public byte getByte() {return 0x00;}
-        public char getChar() {return 'a';}
+        public int execute(boolean foo, long bar, short baz, float qux) {
+            return 0;
+        }
+
+        public static final String[] PARAMETERS = { "foo", "bar", "baz", "qux" };
+
+        public byte getByte() {
+            return 0x00;
+        }
+
+        public char getChar() {
+            return 'a';
+        }
     }
 
     public void testPrimitiveContext() {
@@ -63,13 +72,13 @@ public class ScriptContextInfoTests extends ESTestCase {
         eparams.add(new Tuple<>("long", "bar"));
         eparams.add(new Tuple<>("short", "baz"));
         eparams.add(new Tuple<>("float", "qux"));
-        for (int i=0; i < info.execute.parameters.size(); i++) {
+        for (int i = 0; i < info.execute.parameters.size(); i++) {
             assertEquals(eparams.get(i).v1(), info.execute.parameters.get(i).type);
             assertEquals(eparams.get(i).v2(), info.execute.parameters.get(i).name);
         }
         assertEquals(2, info.getters.size());
-        HashMap<String,String> getters = new HashMap<>(Map.of("getByte","byte", "getChar","char"));
-        for (ScriptContextInfo.ScriptMethodInfo getter: info.getters) {
+        HashMap<String, String> getters = new HashMap<>(Map.of("getByte", "byte", "getChar", "char"));
+        for (ScriptContextInfo.ScriptMethodInfo getter : info.getters) {
             assertEquals(0, getter.parameters.size());
             String returnType = getters.remove(getter.name);
             assertNotNull(returnType);
@@ -78,16 +87,26 @@ public class ScriptContextInfoTests extends ESTestCase {
         assertEquals(0, getters.size());
     }
 
-
     public static class CustomType0 {}
+
     public static class CustomType1 {}
+
     public static class CustomType2 {}
 
     public static class CustomTypeContext {
-        public CustomType0 execute(CustomType1 custom1, CustomType2 custom2) {return new CustomType0();}
-        public static final String[] PARAMETERS = {"custom1", "custom2"};
-        public CustomType1 getCustom1() {return new CustomType1();}
-        public CustomType2 getCustom2() {return new CustomType2();}
+        public CustomType0 execute(CustomType1 custom1, CustomType2 custom2) {
+            return new CustomType0();
+        }
+
+        public static final String[] PARAMETERS = { "custom1", "custom2" };
+
+        public CustomType1 getCustom1() {
+            return new CustomType1();
+        }
+
+        public CustomType2 getCustom2() {
+            return new CustomType2();
+        }
     }
 
     public void testCustomTypeContext() {
@@ -104,13 +123,13 @@ public class ScriptContextInfoTests extends ESTestCase {
         List<Tuple<String, String>> eparams = new ArrayList<>();
         eparams.add(new Tuple<>(ct1, "custom1"));
         eparams.add(new Tuple<>(ct2, "custom2"));
-        for (int i=0; i < info.execute.parameters.size(); i++) {
+        for (int i = 0; i < info.execute.parameters.size(); i++) {
             assertEquals(eparams.get(i).v1(), info.execute.parameters.get(i).type);
             assertEquals(eparams.get(i).v2(), info.execute.parameters.get(i).name);
         }
         assertEquals(2, info.getters.size());
-        HashMap<String,String> getters = new HashMap<>(Map.of("getCustom1",ct1, "getCustom2",ct2));
-        for (ScriptContextInfo.ScriptMethodInfo getter: info.getters) {
+        HashMap<String, String> getters = new HashMap<>(Map.of("getCustom1", ct1, "getCustom2", ct2));
+        for (ScriptContextInfo.ScriptMethodInfo getter : info.getters) {
             assertEquals(0, getter.parameters.size());
             String returnType = getters.remove(getter.name);
             assertNotNull(returnType);
@@ -118,8 +137,8 @@ public class ScriptContextInfoTests extends ESTestCase {
         }
         assertEquals(0, getters.size());
 
-        HashMap<String,String> methods = new HashMap<>(Map.of("getCustom1",ct1, "getCustom2",ct2, "execute",ct0));
-        for (ScriptContextInfo.ScriptMethodInfo method: info.methods()) {
+        HashMap<String, String> methods = new HashMap<>(Map.of("getCustom1", ct1, "getCustom2", ct2, "execute", ct0));
+        for (ScriptContextInfo.ScriptMethodInfo method : info.methods()) {
             String returnType = methods.remove(method.name);
             assertNotNull(returnType);
             assertEquals(returnType, method.returnType);
@@ -129,21 +148,29 @@ public class ScriptContextInfoTests extends ESTestCase {
 
     public static class TwoExecute {
         public void execute(int foo) {}
-        public boolean execute(boolean foo) {return foo;}
-        public static final String[] PARAMETERS = {"foo"};
+
+        public boolean execute(boolean foo) {
+            return foo;
+        }
+
+        public static final String[] PARAMETERS = { "foo" };
     }
 
     public void testTwoExecute() {
-        IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () ->
-            new ScriptContextInfo("two_execute", TwoExecute.class));
+        IllegalArgumentException e = expectThrows(
+            IllegalArgumentException.class,
+            () -> new ScriptContextInfo("two_execute", TwoExecute.class)
+        );
         assertEquals("Cannot have multiple [execute] methods on class [" + TwoExecute.class.getName() + "]", e.getMessage());
     }
 
     public static class NoExecute {}
 
     public void testNoExecute() {
-        IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () ->
-            new ScriptContextInfo("no_execute", NoExecute.class));
+        IllegalArgumentException e = expectThrows(
+            IllegalArgumentException.class,
+            () -> new ScriptContextInfo("no_execute", NoExecute.class)
+        );
         assertEquals("Could not find required method [execute] on class [" + NoExecute.class.getName() + "]", e.getMessage());
     }
 
@@ -152,55 +179,89 @@ public class ScriptContextInfoTests extends ESTestCase {
     }
 
     public void testNoParametersField() {
-        IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () ->
-            new ScriptContextInfo("no_parameters_field", NoParametersField.class));
-        assertEquals("Could not find field [PARAMETERS] on instance class [" + NoParametersField.class.getName() +
-            "] but method [execute] has [1] parameters", e.getMessage());
+        IllegalArgumentException e = expectThrows(
+            IllegalArgumentException.class,
+            () -> new ScriptContextInfo("no_parameters_field", NoParametersField.class)
+        );
+        assertEquals(
+            "Could not find field [PARAMETERS] on instance class ["
+                + NoParametersField.class.getName()
+                + "] but method [execute] has [1] parameters",
+            e.getMessage()
+        );
     }
 
     public static class BadParametersFieldType {
         public void execute(int foo) {}
-        public static final int[] PARAMETERS = {1};
+
+        public static final int[] PARAMETERS = { 1 };
     }
 
     public void testBadParametersFieldType() {
-        IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () ->
-            new ScriptContextInfo("bad_parameters_field_type", BadParametersFieldType.class));
-        assertEquals("Expected a constant [String[] PARAMETERS] on instance class [" + BadParametersFieldType.class.getName() +
-            "] for method [execute] with [1] parameters, found [int[]]", e.getMessage());
+        IllegalArgumentException e = expectThrows(
+            IllegalArgumentException.class,
+            () -> new ScriptContextInfo("bad_parameters_field_type", BadParametersFieldType.class)
+        );
+        assertEquals(
+            "Expected a constant [String[] PARAMETERS] on instance class ["
+                + BadParametersFieldType.class.getName()
+                + "] for method [execute] with [1] parameters, found [int[]]",
+            e.getMessage()
+        );
     }
 
     public static class WrongNumberOfParameters {
         public void execute(int foo) {}
-        public static final String[] PARAMETERS = {"foo", "bar"};
+
+        public static final String[] PARAMETERS = { "foo", "bar" };
     }
 
     public void testWrongNumberOfParameters() {
-        IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () ->
-            new ScriptContextInfo("wrong_number_of_parameters", WrongNumberOfParameters.class));
-        assertEquals("Expected argument names [2] to have the same arity [1] for method [execute] of class ["
-            + WrongNumberOfParameters.class.getName() + "]", e.getMessage());
+        IllegalArgumentException e = expectThrows(
+            IllegalArgumentException.class,
+            () -> new ScriptContextInfo("wrong_number_of_parameters", WrongNumberOfParameters.class)
+        );
+        assertEquals(
+            "Expected argument names [2] to have the same arity [1] for method [execute] of class ["
+                + WrongNumberOfParameters.class.getName()
+                + "]",
+            e.getMessage()
+        );
     }
 
     public interface Default {
-        default int getDefault() {return 1;}
+        default int getDefault() {
+            return 1;
+        }
+
         boolean getNonDefault1();
     }
 
     public static class GetterConditional implements Default {
         public void execute() {}
-        public boolean getNonDefault1() {return true;}
-        public float getNonDefault2() {return 0.1f;}
-        public static long getStatic() {return 2L;}
-        public char getChar(char ch) { return ch;}
+
+        public boolean getNonDefault1() {
+            return true;
+        }
+
+        public float getNonDefault2() {
+            return 0.1f;
+        }
+
+        public static long getStatic() {
+            return 2L;
+        }
+
+        public char getChar(char ch) {
+            return ch;
+        }
     }
 
     public void testGetterConditional() {
-        Set<ScriptMethodInfo> getters =
-            new ScriptContextInfo("getter_conditional", GetterConditional.class).getters;
+        Set<ScriptMethodInfo> getters = new ScriptContextInfo("getter_conditional", GetterConditional.class).getters;
         assertEquals(2, getters.size());
-        HashMap<String,String> methods = new HashMap<>(Map.of("getNonDefault1","boolean", "getNonDefault2","float"));
-        for (ScriptContextInfo.ScriptMethodInfo method: getters) {
+        HashMap<String, String> methods = new HashMap<>(Map.of("getNonDefault1", "boolean", "getNonDefault2", "float"));
+        for (ScriptContextInfo.ScriptMethodInfo method : getters) {
             String returnType = methods.remove(method.name);
             assertNotNull(returnType);
             assertEquals(returnType, method.returnType);
@@ -213,77 +274,84 @@ public class ScriptContextInfoTests extends ESTestCase {
 
         XContentParser parser = XContentType.JSON.xContent()
             .createParser(
-                NamedXContentRegistry.EMPTY, DeprecationHandler.THROW_UNSUPPORTED_OPERATION,
-                new BytesArray("{\"type\":\"foo\", \"name\": \"bar\"}").streamInput());
+                NamedXContentRegistry.EMPTY,
+                DeprecationHandler.THROW_UNSUPPORTED_OPERATION,
+                new BytesArray("{\"type\":\"foo\", \"name\": \"bar\"}").streamInput()
+            );
         ScriptContextInfo.ScriptMethodInfo.ParameterInfo info = ScriptContextInfo.ScriptMethodInfo.ParameterInfo.fromXContent(parser);
         assertEquals(new ScriptContextInfo.ScriptMethodInfo.ParameterInfo("foo", "bar"), info);
     }
 
     public void testScriptMethodInfoParser() throws IOException {
-        String json = "{\"name\": \"fooFunc\", \"return_type\": \"int\", \"params\": [{\"type\": \"int\", \"name\": \"fooParam\"}, " +
-            "{\"type\": \"java.util.Map\", \"name\": \"barParam\"}]}";
+        String json = "{\"name\": \"fooFunc\", \"return_type\": \"int\", \"params\": [{\"type\": \"int\", \"name\": \"fooParam\"}, "
+            + "{\"type\": \"java.util.Map\", \"name\": \"barParam\"}]}";
         XContentParser parser = XContentType.JSON.xContent()
-            .createParser(
-                NamedXContentRegistry.EMPTY, DeprecationHandler.THROW_UNSUPPORTED_OPERATION,
-                new BytesArray(json).streamInput());
+            .createParser(NamedXContentRegistry.EMPTY, DeprecationHandler.THROW_UNSUPPORTED_OPERATION, new BytesArray(json).streamInput());
         ScriptContextInfo.ScriptMethodInfo info = ScriptContextInfo.ScriptMethodInfo.fromXContent(parser);
-        assertEquals(new ScriptContextInfo.ScriptMethodInfo("fooFunc", "int", new ArrayList<>(
-            Arrays.asList(new ScriptContextInfo.ScriptMethodInfo.ParameterInfo("int", "fooParam"),
-                new ScriptContextInfo.ScriptMethodInfo.ParameterInfo("java.util.Map", "barParam"))
-        )), info);
+        assertEquals(
+            new ScriptContextInfo.ScriptMethodInfo(
+                "fooFunc",
+                "int",
+                new ArrayList<>(
+                    Arrays.asList(
+                        new ScriptContextInfo.ScriptMethodInfo.ParameterInfo("int", "fooParam"),
+                        new ScriptContextInfo.ScriptMethodInfo.ParameterInfo("java.util.Map", "barParam")
+                    )
+                )
+            ),
+            info
+        );
     }
 
     public void testScriptContextInfoParser() throws IOException {
-        String json = "{" +
-            "  \"name\": \"similarity\"," +
-            "  \"methods\": [" +
-            "    {" +
-            "      \"name\": \"execute\"," +
-            "      \"return_type\": \"double\"," +
-            "      \"params\": [" +
-            "        {" +
-            "          \"type\": \"double\"," +
-            "          \"name\": \"weight\"" +
-            "        }," +
-            "        {" +
-            "          \"type\": \"org.elasticsearch.index.similarity.ScriptedSimilarity$Query\"," +
-            "          \"name\": \"query\"" +
-            "        }," +
-            "        {" +
-            "          \"type\": \"org.elasticsearch.index.similarity.ScriptedSimilarity$Field\"," +
-            "          \"name\": \"field\"" +
-            "        }," +
-            "        {" +
-            "          \"type\": \"org.elasticsearch.index.similarity.ScriptedSimilarity$Term\"," +
-            "          \"name\": \"term\"" +
-            "        }," +
-            "        {" +
-            "          \"type\": \"org.elasticsearch.index.similarity.ScriptedSimilarity$Doc\"," +
-            "          \"name\": \"doc\"" +
-            "        }" +
-            "      ]" +
-            "    }," +
-            "    {" +
-            "      \"name\": \"getParams\"," +
-            "      \"return_type\": \"java.util.Map\"," +
-            "      \"params\": []" +
-            "    }," +
-            "    {" +
-            "      \"name\": \"getDoc\"," +
-            "      \"return_type\": \"java.util.Map\"," +
-            "      \"params\": []" +
-            "    }," +
-            "    {" +
-            "      \"name\": \"get_score\"," +
-            "      \"return_type\": \"double\"," +
-            "      \"params\": []" +
-            "    }" +
-            "  ]" +
-            "}";
+        String json = "{"
+            + "  \"name\": \"similarity\","
+            + "  \"methods\": ["
+            + "    {"
+            + "      \"name\": \"execute\","
+            + "      \"return_type\": \"double\","
+            + "      \"params\": ["
+            + "        {"
+            + "          \"type\": \"double\","
+            + "          \"name\": \"weight\""
+            + "        },"
+            + "        {"
+            + "          \"type\": \"org.elasticsearch.index.similarity.ScriptedSimilarity$Query\","
+            + "          \"name\": \"query\""
+            + "        },"
+            + "        {"
+            + "          \"type\": \"org.elasticsearch.index.similarity.ScriptedSimilarity$Field\","
+            + "          \"name\": \"field\""
+            + "        },"
+            + "        {"
+            + "          \"type\": \"org.elasticsearch.index.similarity.ScriptedSimilarity$Term\","
+            + "          \"name\": \"term\""
+            + "        },"
+            + "        {"
+            + "          \"type\": \"org.elasticsearch.index.similarity.ScriptedSimilarity$Doc\","
+            + "          \"name\": \"doc\""
+            + "        }"
+            + "      ]"
+            + "    },"
+            + "    {"
+            + "      \"name\": \"getParams\","
+            + "      \"return_type\": \"java.util.Map\","
+            + "      \"params\": []"
+            + "    },"
+            + "    {"
+            + "      \"name\": \"getDoc\","
+            + "      \"return_type\": \"java.util.Map\","
+            + "      \"params\": []"
+            + "    },"
+            + "    {"
+            + "      \"name\": \"get_score\","
+            + "      \"return_type\": \"double\","
+            + "      \"params\": []"
+            + "    }"
+            + "  ]"
+            + "}";
         XContentParser parser = XContentType.JSON.xContent()
-            .createParser(
-                NamedXContentRegistry.EMPTY, DeprecationHandler.THROW_UNSUPPORTED_OPERATION,
-                new BytesArray(json).streamInput());
+            .createParser(NamedXContentRegistry.EMPTY, DeprecationHandler.THROW_UNSUPPORTED_OPERATION, new BytesArray(json).streamInput());
         ScriptContextInfo parsed = ScriptContextInfo.fromXContent(parser);
         ScriptContextInfo expected = new ScriptContextInfo(
             "similarity",
@@ -308,11 +376,15 @@ public class ScriptContextInfoTests extends ESTestCase {
     }
 
     public void testIgnoreOtherMethodsInListConstructor() {
-        ScriptContextInfo constructed = new ScriptContextInfo("otherNames", List.of(
-            new ScriptMethodInfo("execute", "double", Collections.emptyList()),
-            new ScriptMethodInfo("otherName", "bool", Collections.emptyList())
-        ));
-        ScriptContextInfo expected = new ScriptContextInfo("otherNames",
+        ScriptContextInfo constructed = new ScriptContextInfo(
+            "otherNames",
+            List.of(
+                new ScriptMethodInfo("execute", "double", Collections.emptyList()),
+                new ScriptMethodInfo("otherName", "bool", Collections.emptyList())
+            )
+        );
+        ScriptContextInfo expected = new ScriptContextInfo(
+            "otherNames",
             new ScriptMethodInfo("execute", "double", Collections.emptyList()),
             Collections.emptySet()
         );
@@ -320,21 +392,30 @@ public class ScriptContextInfoTests extends ESTestCase {
     }
 
     public void testNoExecuteInListConstructor() {
-        IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () ->
-            new ScriptContextInfo("noExecute", List.of(
-                new ScriptMethodInfo("getSomeOther", "int", Collections.emptyList()),
-                new ScriptMethodInfo("getSome", "bool", Collections.emptyList())
-            )));
+        IllegalArgumentException e = expectThrows(
+            IllegalArgumentException.class,
+            () -> new ScriptContextInfo(
+                "noExecute",
+                List.of(
+                    new ScriptMethodInfo("getSomeOther", "int", Collections.emptyList()),
+                    new ScriptMethodInfo("getSome", "bool", Collections.emptyList())
+                )
+            )
+        );
         assertEquals("Could not find required method [execute] in [noExecute], found [getSome, getSomeOther]", e.getMessage());
     }
 
     public void testMultipleExecuteInListConstructor() {
-        IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () ->
-            new ScriptContextInfo("multiexecute", List.of(
-                new ScriptMethodInfo("execute", "double", Collections.emptyList()),
-                new ScriptMethodInfo("execute", "double", List.of(
-                    new ParameterInfo("double", "weight")
-            )))));
+        IllegalArgumentException e = expectThrows(
+            IllegalArgumentException.class,
+            () -> new ScriptContextInfo(
+                "multiexecute",
+                List.of(
+                    new ScriptMethodInfo("execute", "double", Collections.emptyList()),
+                    new ScriptMethodInfo("execute", "double", List.of(new ParameterInfo("double", "weight")))
+                )
+            )
+        );
         assertEquals("Cannot have multiple [execute] methods in [multiexecute], found [2]", e.getMessage());
     }
 }
